--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 @import '/css/cmps/app-header.css';
+@import '/css/apps/keep/keep-app.css';
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
