--- a/css/apps/keep/cmps/note-add.css
+++ b/css/apps/keep/cmps/note-add.css
@@ -1,8 +1,54 @@
+.main-note-controls {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  flex-direction: column;
+  flex: 1;
+}
+.main-note-form {
+  background-color: green;
+}
 
-.text-container {
-    display: flex;
-    margin: 0 auto;
-    flex-direction: column;
-    width: 200px;
-    height: 60px;
+.main-note-form textarea {
+  resize: none;
+  width: 100%;
+}
+.main-note-form input {
+  width: 100%;
+}
+.note-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.note {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: blueviolet;
+  min-width: 200px;
+  min-height: 50px;
+  border-radius: 5px;
+  padding: 5px;
+}
+.note a {
+  text-decoration: none;
+  color: black;
+}
+.note .remove-note {
+  align-self: flex-end;
+}
+/* .note a .note-img {
+  align-self: center;
+} */
+.remove-note::before {
+  font-family: fa;
+  content: '\f1f8';
+}
+
+.remove-note {
+  display: flex;
+  justify-content: flex-end;
 }
