--- a/css/apps/keep/keep-app.css
+++ b/css/apps/keep/keep-app.css
@@ -1,8 +1,3 @@
 @import '../keep/parts/notes.css';
 @import '../keep/cmps/note-add.css';
-
-
-textarea {
- resize: none;
- width: 100%;
-}
+@import '../keep/cmps/note-update.css';
