--- a/css/apps/keep/keep-app.css
+++ b/css/apps/keep/keep-app.css
@@ -1,3 +1,4 @@
 @import '../keep/parts/notes.css';
 @import '../keep/cmps/note-add.css';
 @import '../keep/cmps/note-update.css';
+@import '../keep/parts/keep-app-header.css';
