--- a/css/apps/keep/parts/notes.css
+++ b/css/apps/keep/parts/notes.css
@@ -1,40 +1,13 @@
-<<<<<<< HEAD
-.notes-container {
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: 40px;
-}
-
-.note {
-    background-color: aqua;
-    width: 200px;
-    height: 200px;
-    margin: 5px;
-}
-
-.note-control-container {
-    display: flex;
-    margin: 0;
-}
-
-.note-text-input {
-    width: 100%;
-}
-
-.add-note-form {
-    width: 200px;
-}
-
-.add-note-form input {
-    width: 100%;
-}
-=======
 .in-note-control {
   display: flex;
 }
 
 .note .remove-note {
   align-self: flex-end;
+  background-color: transparent;
+  border: none;
+  width: 15px;
+  height: 15px;
 }
 
 .remove-note::before {
@@ -46,4 +19,34 @@
   display: flex;
   justify-content: flex-end;
 }
->>>>>>> d65c4598dde12ad37798e3b0b85cd3a95b902d45
+
+.color-container {
+  width: 15px;
+  height: 15px;
+  background-color: aqua;
+  position: relative;
+}
+.color-container input {
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  color: transparent;
+  border: 0;
+  cursor: pointer;
+}
+.color-container i {
+  background-color: white;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+}
+.color-container i::before {
+  font-size: 1rem;
+}
+
+.color-container-main {
+font-size: 1.2rem;
+}
