--- a/css/apps/mail/cmps.css
+++ b/css/apps/mail/cmps.css
@@ -19,6 +19,11 @@
     color: gold;
 }
 
+.star {
+    line-height: 100%;
+    vertical-align: middle;
+}
+
 .star:hover {
     color: whitesmoke;
 }
@@ -30,31 +35,8 @@
     list-style: none;
 }
 
-
-/* folder-filter */
-
-.folder-list {
-    height: 100vh;
-    width: 150px;
-    display: flex;
-    flex-direction: column;
-    float: left;
-    background-color: lightgreen;
-}
-
-.folder-list:first-child {
-    margin-block-start: 5px
-}
-
-.folder-list button {
-    border: none;
-    margin-block-end: 5px;
-    text-align: left;
-    background-color: lightgreen;
-}
-
-.folder-list button:hover {
-    background-color: rgb(92, 238, 92);
+.bold {
+    font-weight: bold;
 }
 
 
