--- a/css/apps/mail/mail-app.css
+++ b/css/apps/mail/mail-app.css
@@ -1,8 +1,31 @@
 @import 'cmps.css';
-.bold {
-    font-weight: bold;
+@import 'cmps/top-bar.css';
+@import 'cmps/side-bar.css';
+.email-app {
+    display: grid;
+    grid-template-columns: 200px 1fr;
+    grid-template-rows: 60px 1fr;
 }
 
-.email-preview> :not(:last-child) {
-    /* border-inline-end: 1px solid black; */
+.top-bar {
+    grid-column-start: 1;
+    grid-column-end: span 2;
 }
+
+.side-bar {
+    grid-column-start: 1;
+    grid-column-end: span 2;
+    grid-row-start: 2;
+    grid-row-end: span 2;
+}
+
+.email-list {
+    grid-column-start: 2;
+    grid-row-start: 2;
+}
+
+
+/*
+.top-bar {
+    grid-column-start: 1, 1;
+} */
