--- a/css/apps/mail/cmps/top-bar.css
+++ b/css/apps/mail/cmps/top-bar.css
@@ -5,6 +5,7 @@
     font-family: Arial, Helvetica, sans-serif;
     border-bottom: 1px solid lightgray;
     padding-block-end: 10px;
+    padding-block-start: 10px;
     margin-block-end: 5px;
 }
 
@@ -36,6 +37,14 @@
     grid-area: "top-bar";
 }
 
-.sorting {
-    margin-inline-start: 15rem;
+.sorting * {
+    margin-inline-end: 5px;
+}
+
+.read-filter {
+    margin-inline-end: 1rem;
+}
+
+.unread-count {
+    margin-inline-end: 5rem;
 }
