--- a/css/apps/mail/cmps/email-preview.css
+++ b/css/apps/mail/cmps/email-preview.css
@@ -13,6 +13,7 @@ a {
     color: rgb(82, 82, 82);
     padding: 5px;
     border-bottom: 1px solid rgb(211, 211, 211);
+    text-align: left;
 }
 
 .email-preview:hover {
