--- a/css/apps/keep/keep-app.css
+++ b/css/apps/keep/keep-app.css
@@ -1,4 +1,22 @@
-@import '../keep/parts/notes.css';
+@import '../keep/parts/note.css';
 @import '../keep/cmps/note-add.css';
 @import '../keep/cmps/note-update.css';
 @import '../keep/parts/keep-app-header.css';
+
+/* .note-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-top: 20px;
+} */
+.note-container {
+  width: 100%;
+  height: min-content;
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-rows: repeat(auto-fit, minmax(min-content, 1fr));
+  grid-auto-flow: dense;
+  justify-items: center;
+  margin-top: 20px;
+}
