--- a/css/main.css
+++ b/css/main.css
@@ -11,4 +11,15 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+ul li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
 /* HELPERS */
+/* TEMP SHOULD NOT BE HERE */
+.edit-text-todo {
+  width: 200px;
+  height: fit-content;
+}
