--- a/css/apps/keep/keep-app.css
+++ b/css/apps/keep/keep-app.css
@@ -10,13 +10,11 @@
   margin-top: 20px;
 } */
 .note-container {
-  width: 100%;
-  height: min-content;
   display: grid;
+  width: 100%;
   gap: 1rem;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  grid-template-rows: repeat(auto-fit, minmax(min-content, 1fr));
-  grid-auto-flow: dense;
+  grid-auto-rows: minmax(min-content, max-content);
   justify-items: center;
   margin-top: 20px;
 }
