--- a/css/apps/keep/parts/keep-app-header.css
+++ b/css/apps/keep/parts/keep-app-header.css
@@ -8,19 +8,28 @@
   border-bottom: 1px solid rgb(172, 172, 172);
 }
 
-.active-search {
+.filter-container.active-search {
   box-shadow: 0 1px 1px rgb(65 69 73 / 30%), 0 1px 3px 1px rgb(65 69 73 / 15%);
   border: 1px solid transparent;
+  background-color: #ffffff;
+  border-radius: 5px;
 }
+
 .search-bar {
-  width: 40%;
+  width: 30%;
   background-color: #f1f3f4;
   border-radius: 5px;
   margin: 8px;
   margin-inline-start: 60px;
   border: 1px solid #c2c3c5;
 }
-.search-bar input {
+input.active-search{
+  background-color: #ffffff;
+  outline: none;
+  border: none;
+}
+
+.filter-search {
   width: 82%;
   height: 46px;
   background-color: #f1f3f4;
