--- a/css/apps/mail/cmps/email-preview.css
+++ b/css/apps/mail/cmps/email-preview.css
@@ -3,17 +3,17 @@ a {
 }
 
 .email-preview {
-    background-color: white;
-    display: flex;
-    justify-content: space-between;
     font-family: Arial;
     margin-inline-end: 10px;
     margin-inline-start: 10px;
     cursor: pointer;
     color: rgb(82, 82, 82);
-    padding: 5px;
+    padding: 4px;
     border-bottom: 1px solid rgb(211, 211, 211);
-    text-align: left;
+    display: grid;
+    grid-template-columns: min-content 160px 150px minmax(0, 500px) min-content min-content;
+    gap: 70px;
+    align-items: center;
 }
 
 .email-preview:hover {
@@ -21,19 +21,11 @@ a {
     box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.37);
 }
 
-.preview-to {
-    width: 20%;
-}
-
 .starred {
     color: gold;
 }
 
-.star {
-    line-height: 100%;
-    vertical-align: middle;
-}
-
 .star:hover {
-    color: rgb(143, 143, 143);
+    background-color: rgb(212, 212, 212);
+    border-radius: 50%;
 }
