--- a/css/apps/mail/cmps/email-compose.css
+++ b/css/apps/mail/cmps/email-compose.css
@@ -2,7 +2,6 @@
     width: 450px;
     height: 450px;
     background-color: white;
-    border: 1px solid darkgray;
     position: absolute;
     top: 0;
     bottom: 0;
@@ -12,10 +11,12 @@
     display: flex;
     flex-direction: column;
     box-shadow: 2px 5px 16px 0px #010203, -3px 0px 3px 10px rgba(0, 0, 0, 0);
+    border-radius: 20px;
 }
 
 .compose-email * {
     font-family: Arial, Helvetica, sans-serif;
+    border-radius: 5px;
 }
 
 .compose-email h1 {
@@ -37,11 +38,18 @@
 .compose-email form {
     align-self: center;
     max-width: 80%;
+    max-height: 75%;
     display: flex;
     flex-direction: column;
     gap: 10px;
     margin-block-start: 50px;
     text-align: center;
+}
+
+.compose-email form *:not(:first-child) {
+    border: 0;
+    border: 1px solid rgb(209, 209, 209);
+    outline: none;
 }
 
 .compose-email form button {
@@ -52,35 +60,31 @@
 
 .compose-email textarea {
     resize: none;
+    max-height: 50%;
 }
 
 .compose-email-buttons {
     display: flex;
     justify-content: space-between;
-    margin: 40px;
-}
-
-.compose-email-buttons {
-    display: flex;
-    justify-content: space-between;
-    margin: 40px;
 }
 
 .compose-email-buttons *:first-child {
     box-shadow: 0 1px 2px 0 #4285f4, 0 1px 3px 1px #4285f4;
-    color: #4285f4
+    color: #4285f4;
+    margin-inline-start: 20px;
 }
 
 .compose-email-buttons *:last-child {
     box-shadow: 0 1px 2px 0 #34a852, 0 1px 3px 1px #34a852;
-    color: #34a852
+    color: #34a852;
+    margin-inline-end: 20px;
 }
 
 .compose-email h5 {
     color: rgb(255, 0, 0);
     position: absolute;
-    bottom: 4em;
-    margin-inline-start: 0.2em;
+    bottom: 5em;
+    margin-inline-start: 0.5em;
 }
 
 .compose-background {
