--- a/css/apps/keep/keep-app.css
+++ b/css/apps/keep/keep-app.css
@@ -20,7 +20,7 @@
   display: grid;
   width: 100%;
   gap: 1rem;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
   grid-auto-rows: minmax(min-content, max-content);
   justify-items: center;
   margin-top: 20px;
@@ -31,4 +31,10 @@ ul li {
   list-style: none;
   margin: 0;
   padding: 0;
+}
+
+/* NOTE SPECIFIC HELPERS */
+
+.line-through {
+  text-decoration: line-through;
 }
