--- a/css/apps/mail/cmps/email-compose.css
+++ b/css/apps/mail/cmps/email-compose.css
@@ -87,7 +87,7 @@
     margin-inline-start: 0.5em;
 }
 
-.compose-background {
+.black-background {
     position: absolute;
     width: 100%;
     height: 100%;
