--- a/css/apps/mail/cmps/side-bar.css
+++ b/css/apps/mail/cmps/side-bar.css
@@ -6,6 +6,7 @@
 }
 
 .compose-btn {
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -57,4 +58,25 @@
 .folder-list button:focus {
     background-color: rgb(255, 206, 206);
     color: rgb(179, 0, 0);
+}
+
+@media (max-width: 860px) {
+    html {
+        font-size: 14px;
+    }
+    .side-bar {
+        max-width: 99%;
+        padding-inline-end: 5px;
+        background-color: white;
+    }
+    .side-bar * {
+        font-size: 20px;
+        margin: 10px;
+    }
+    .folder-list button {
+        height: 70px;
+    }
+    .folder-list {
+        width: 100%;
+    }
 }
