--- a/css/apps/keep/cmps/note-add.css
+++ b/css/apps/keep/cmps/note-add.css
@@ -22,7 +22,7 @@
 textarea {
   border: none;
   outline: none;
-  color: #4c4c4c;
+  color: black;
   font-size: 1.2rem;
   padding: 10px;
 }
@@ -50,6 +50,7 @@ textarea {
 .color-icon:hover {
   color: gold;
 }
+
 .dummy-input-container {
   display: flex;
   background-color: #ffffff;
@@ -150,8 +151,9 @@ textarea {
 }
 .main-note-form img {
   text-align: center;
+  padding: 20px;
   width: 100%;
-  height: 300px;
+  height: 400px;
   border-radius: 5px;
 }
 .clear-img-btn {
@@ -161,7 +163,7 @@ textarea {
   padding: 10px;
   position: absolute;
   right: 33%;
-  top: 28%;
+  top: 33%;
   border-radius: 5px;
 }
 .clear-img-btn::before{
