--- a/css/apps/keep/keep-app.css
+++ b/css/apps/keep/keep-app.css
@@ -22,10 +22,46 @@
   gap: 1rem;
   grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
   grid-auto-rows: minmax(min-content, max-content);
+  grid-auto-flow: dense;
   justify-items: center;
   margin-top: 20px;
 }
+/* .note-container {
+  display: grid;
+  width: 100%;
+  gap: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  grid-template-rows: repeat(auto-fill, 100px);
+  grid-template-rows: repeat(auto-fill, 100px);
+  grid-auto-rows: minmax(min-content, max-content);
+  grid-auto-flow: dense;
+  justify-items: center;
+  margin-top: 20px;
+} */
+.user-msg {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  right: 87%;
+  top: 93%;
+  height: 100px;
+  width: 20%;
+  border-radius: 5px;
+  transform: translate(50%, -50%);
+}
+.user-msg p {
+  font-size: 1.2rem;
+  margin-inline-start: 20px;
+}
 
+.Success {
+  background-color: #323232;
+  color: white;
+}
+.Failure {
+  background-color: #323232;
+  color: red;
+}
 /* general */
 ul li {
   list-style: none;
