--- a/css/cmps/app-home.css
+++ b/css/cmps/app-home.css
@@ -11,3 +11,9 @@
     color: lightblue;
     text-shadow: 2px 2px 0px #FFFFFF, 5px 4px 0px rgba(0, 0, 0, 0.15);
 }
+
+@media (max-width: 860px) {
+    .home-page img {
+        max-width: 300px;
+    }
+}
