--- a/css/cmps/app-header.css
+++ b/css/cmps/app-header.css
@@ -8,9 +8,16 @@
 .main-header .appSus {
   display: flex;
   align-self: center;
-  margin-inline-start: 50px;
   font-size: 1.4rem;
   cursor: pointer;
+}
+.main-header img {
+  width: 50px;
+  height: 50px;
+}
+.logo-container{
+  display: flex;
+  margin-inline-start: 50px;
 }
 .main-header nav a:hover {
   background-color: #ececed;
