--- a/css/apps/keep/cmps/note-add.css
+++ b/css/apps/keep/cmps/note-add.css
@@ -197,3 +197,13 @@ textarea {
  font-family: fa;
  content: '\f574'
 } */
+
+
+
+@media(max-width: 670px){
+  .main-note-form{
+    margin: 10px;
+    width: 100%;
+  }
+
+}
