--- a/css/cmps/app-header.css
+++ b/css/cmps/app-header.css
@@ -41,3 +41,11 @@
   padding: 10px;
   cursor: pointer;
 }
+@media (max-width: 570px) {
+  .logo-container{
+    margin: 0;
+  }
+  .main-header nav{
+    margin: 0;
+  }
+}
