--- a/css/apps/keep/parts/note.css
+++ b/css/apps/keep/parts/note.css
@@ -1,10 +1,11 @@
 /* NOTE */
 .note {
+  display: flex;
   flex-direction: column;
-  align-items: center;
   width: 260px;
   min-height: 104px;
   border: 1px solid #cec9c9;
+  justify-content: space-between;
   border-radius: 5px;
   padding: 5px;
   overflow-wrap: break-word;
@@ -23,9 +24,10 @@
   color: black;
 }
 .in-note-control {
+  justify-self: flex-end;
   display: flex;
   width: 100%;
-  justify-content: flex-end;
+  justify-content: space-evenly;
 }
 .in-note-control > * {
   margin: 5px;
