--- a/css/apps/keep/parts/note.css
+++ b/css/apps/keep/parts/note.css
@@ -10,6 +10,10 @@
   padding: 5px;
   overflow-wrap: break-word;
 }
+.note:hover{
+  box-shadow: -1px 3px 3px 1px rgba(51, 49, 49, 0.404);
+
+}
 
 .note img {
   width: 100%;
