--- a/css/main.css
+++ b/css/main.css
@@ -5,28 +5,51 @@
 @import './apps/mail/mail-app.css';
 @import './cmps/app-home.css';
 @font-face {
-    font-family: fa;
-    src: url('../fonts/font-awesome.otf');
+  font-family: fa;
+  src: url('../fonts/font-awesome.otf');
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
+.user-msg {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  right: 87%;
+  top: 93%;
+  height: 100px;
+  width: 20%;
+  border-radius: 5px;
+  transform: translate(50%, -50%);
+}
+.user-msg p {
+  font-size: 1.2rem;
+  margin-inline-start: 20px;
+}
 
+.Success {
+  background-color: #323232;
+  color: white;
+}
+.Failure {
+  background-color: #323232;
+  color: red;
+}
 /* HELPERS */
 
 .flex-height-fit {
-    display: flex;
-    height: fit-content;
+  display: flex;
+  height: fit-content;
 }
 
 .hide {
-    display: none;
+  display: none;
 }
 
 .opacity-hide {
-    opacity: 0;
+  opacity: 0;
 }
