--- a/css/apps/mail/cmps/email-compose.css
+++ b/css/apps/mail/cmps/email-compose.css
@@ -1,6 +1,6 @@
 .compose-email {
-    width: 450px;
-    height: 450px;
+    width: 30%;
+    height: 90%;
     background-color: white;
     position: absolute;
     top: 0;
@@ -12,6 +12,13 @@
     flex-direction: column;
     box-shadow: 2px 5px 16px 0px #010203, -3px 0px 3px 10px rgba(0, 0, 0, 0);
     border-radius: 20px;
+    
+}
+@media (max-width: 670px) {
+    .compose-email {
+        width: 80%;
+        height: 60%;
+    }
 }
 
 .compose-email * {
@@ -94,4 +101,5 @@
     background-color: black;
     opacity: 0.1;
     cursor: pointer;
+    z-index: -1;
 }
