--- a/css/apps/mail/cmps/email-preview.css
+++ b/css/apps/mail/cmps/email-preview.css
@@ -16,11 +16,6 @@ a {
     align-items: center;
 }
 
-
-/* .email-preview *:not(:last-child) {
-    margin-inline-end: 100px;
-} */
-
 .email-preview:hover {
     z-index: 1;
     box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.37);
@@ -49,6 +44,7 @@ a {
     .email-preview {
         max-width: 860px;
         display: flex;
+        justify-content: space-between;
     }
     .column {
         display: flex;
