--- a/css/apps/mail/cmps/top-bar.css
+++ b/css/apps/mail/cmps/top-bar.css
@@ -79,4 +79,16 @@
     .search-input {
         width: 100%;
     }
+
+    .blackBgc {
+        width: 100vw;
+        height: 100vh;
+        background-color: black;
+        position: fixed;
+        top: 0;
+        left: -10px;
+        bottom: 0;
+        right: 0;
+        z-index: -1;
+    }
 }
