--- a/css/apps/mail/cmps/email-compose.css
+++ b/css/apps/mail/cmps/email-compose.css
@@ -1,6 +1,6 @@
 .compose-email {
-    width: 30%;
-    height: 90%;
+    width: fit-content;
+    height: fit-content;
     background-color: white;
     position: absolute;
     top: 0;
@@ -12,13 +12,8 @@
     flex-direction: column;
     box-shadow: 2px 5px 16px 0px #010203, -3px 0px 3px 10px rgba(0, 0, 0, 0);
     border-radius: 20px;
-    
-}
-@media (max-width: 670px) {
-    .compose-email {
-        width: 80%;
-        height: 60%;
-    }
+    padding: 20px;
+    z-index: 1;
 }
 
 .compose-email * {
@@ -78,13 +73,11 @@
 .compose-email-buttons *:first-child {
     box-shadow: 0 1px 2px 0 #4285f4, 0 1px 3px 1px #4285f4;
     color: #4285f4;
-    margin-inline-start: 20px;
 }
 
 .compose-email-buttons *:last-child {
     box-shadow: 0 1px 2px 0 #34a852, 0 1px 3px 1px #34a852;
     color: #34a852;
-    margin-inline-end: 20px;
 }
 
 .compose-email h5 {
@@ -101,5 +94,11 @@
     background-color: black;
     opacity: 0.1;
     cursor: pointer;
-    z-index: -1;
+}
+
+@media (max-width: 670px) {
+    .compose-email {
+        width: 80%;
+        height: 60%;
+    }
 }
